@@ -1762,6 +1762,14 @@ writeLines(tail(dp.2))
 ## dp.2 and du.2  where heavily truncated in R <= 3.4.4, ending  "  ..."
 
 
+## optim() with "trivial bounds"
+flb <- function(x) { p <- length(x); sum(c(1, rep(4, p-1)) * (x - c(1, x[-p])^2)^2) }
+o1 <- optim(rep(3, 5), flb)
+o2 <- optim(rep(3, 5), flb, lower = rep(-Inf, 5))
+stopifnot(all.equal(o1,o2))
+## the 2nd optim() call gave a warning and switched to "L-BFGS-B" in R <= 3.5.0
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
